# clanker

./: FEATURES.md  README.md  install.sh  package.xml  pyproject.toml  setup.py
config/: ai_config.yaml  camera.yaml  navigation.yaml
hexapod_autonomous/: .gitignore  FEATURES.md  QUICKSTART.md  README.md  install.sh  requirements.txt
hexapod_autonomous/config/: gait_params.yaml  servos.yaml
hexapod_autonomous/hexapod_ai/: __init__.py  memory_node.py
hexapod_autonomous/hexapod_control/: __init__.py  gait_controller.py
hexapod_autonomous/hexapod_perception/: lidar_node.py  ultrasonic_node.py
hexapod_autonomous/hexapod_vision/: camera_node.py  face_recognition.py  object_detector.py
hexapod_autonomous/hexapod_vision/face_recognition_node/: __init__.py
hexapod_autonomous/launch/: hexapod_bringup.launch.py  hexapod_control.launch.py  hexapod_full.launch.py  hexapod_navigation.launch.py
hexapod_autonomous/src/hexapod_autonomous/: __init__.py
hexapod_autonomous/src/hexapod_autonomous/hexapod_ai/: ai_brain.py  voice_node.py
hexapod_autonomous/src/hexapod_autonomous/hexapod_bringup/: main.py
hexapod_autonomous/src/hexapod_autonomous/hexapod_control/: servo_controller.py
hexapod_autonomous/src/hexapod_autonomous/hexapod_navigation/: __init__.py  navigator.py  person_follower.py
hexapod_autonomous/src/hexapod_autonomous/hexapod_perception/: __init__.py
hexapod_autonomous/src/hexapod_autonomous/hexapod_vision/: __init__.py
launch/: hexapod_ai.launch.py  hexapod_vision.launch.py
models/: .gitkeep
resource/: hexapod_autonomous
